k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: italia-landing
  labels:
    app.kubernetes.io/managed-by: argocd
