k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: italia-landing
  namespace: italia-landing
spec:
  type: ClusterIP
  selector:
    app: italia-landing
  ports:
    - name: http
      port: 3000
      targetPort: http
